# tonic-basic

./: Cargo.toml  build.rs
proto/: basic.proto
src/: client.rs  server.rs
