[package]
name = "tonic-basic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.13.1"
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
tonic = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"
